# K-invest

./: .env.example  .gitignore  CLAUDE.md  README.en.md  README.md  binance_futures_api.py  kinvest_common.py  kis_api.py  margin_ta_runner.py  oauth_provider.py  pyproject.toml  requirements.txt  sec_api.py  sec_derived.py  sec_insider.py  sec_quality.py  sec_segments.py  sec_ttm.py  server.py  toss_accounts.py  toss_api.py  yfinance_api.py  yfinance_consensus.py  yfinance_metrics.py
.claude/: settings.json
.github/workflows/: ci.yml
deploy/: k-invest.service
docs/superpowers/specs/: 2026-07-22-oauth-multi-client-auth-design.md
tests/: test_binance_futures_api.py  test_kinvest_common.py  test_kis_config.py  test_margin_ta_config.py  test_market_risk_tool.py  test_server_main.py  test_toss_accounts.py
